Fix safary z-index, add list sorting

--- a/src/styles/components/modals/_modal.scss
+++ b/src/styles/components/modals/_modal.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: 1000000;
+  transform: translate3d(0,0, 0.1px);
   &--overlay {
     position: absolute;
     width: 100%;
